--- a/kucunbao/InventoryTool.plist
+++ b/kucunbao/InventoryTool.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://molon.github.io/install/InventoryTool.ipa</string>
+					<string>https://molonipa.github.io/kucunbao/InventoryTool.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
