--- a/kucunbao/InventoryTool.plist
+++ b/kucunbao/InventoryTool.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://molonipa.github.io/kucunbao/InventoryTool.ipa</string>
+					<string>http://molonipa.github.io/kucunbao/InventoryTool.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://molon.github.io/avatar.jpg</string>
+					<string>http://molon.me/avatar.jpg</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://molon.github.io/avatar.jpg</string>
+					<string>http://molon.me/avatar.jpg</string>
 				</dict>
 			</array>
 			<key>metadata</key>
